namespace POOI_Heritage_CompteBancaireSansAbstraction.Transactions
{
    public enum TypeTransaction
    {
        DEBIT,
        CREDIT
    }
}